--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+##########################################
+# FILE HEADER
+##########################################
 # Compiled Object files
 *.slo
 *.lo
